# EFTP

./: .gitignore  CMakeLists.txt  LICENSE  README.md
RFC TFTP/: .gitignore  TFTP Rev 2.tex
doc/: Calcolo congestione LAN.xlsx  Controllo della congestione.txt  Use Case Diagram.drawio
src/: client.c  server.c
src/controller/: operations.c
src/model/: error.h  packages.h
src/protocol/: net.h  opt.c
src/server/: main.c
src/server/net/: error.h  net.c  net.h  opt.h
src/server/utils/: net.c
src/utils/: io.c  io.h  net.c  net.h  options.h  validation.c  validation.h
src/view/: user.c  user.h  view.c  view.h
